changed fonts, line height, and stopped wrapping text around project screenshots

--- a/index.css
+++ b/index.css
@@ -1,3 +1,6 @@
+@font-face {font-family: pontanoSans; src: url(./fonts/pontanosans/PontanoSans-Regular.ttf)}
+@font-face {font-family: stintUltraExpanded; src: url(./fonts/stintultraexpanded/StintUltraExpanded-Regular.ttf)}
+
 html {
   height: 100%;
 }
@@ -7,7 +10,11 @@ body {
   margin: 0px;
   display: flex;
   box-sizing: border-box;
-  font-family: sans-serif;
+  font-family: pontanoSans;
+  line-height: 1.5em;
+}
+h1, h2 {
+  font-family: stintUltraExpanded;
 }
 .column {
   height: 100%;
@@ -80,13 +87,10 @@ a:link {
 a:visited {
   color: rgb(186, 149, 186);
 }
-.project {
-  margin-bottom: 5%;
-}
 .project-screenshot {
   margin-right: 5px;
   width: 50%;
-  float: left;
+  /* float: left; */
   border: 1px solid black;
 }
 .project ul {
